package edu.upc.prop.scrabble.data.board;

public enum PremiumTileType {
    QuadrupleWord,
    TripleWord,
    DoubleWord,
    QuadrupleLetter,
    TripleLetter,
    DoubleLetter,
}

