package edu.upc.prop.scrabble.data.pieces;

public record Piece(String letter, int value) {
}
