@startuml
skinparam groupInheritance 2

abstract class Player {
	name: String

	placePiece()
	drawPiece()
}

class Human
class AI

class Bag {
	pieces: Piece[]

	getPiece(): Piece
	isEmpty(): boolean
}

class Piece {
	character: String
	points: Integer
}

class Board {
	premiumTiles: PremiumTileType[]

	getCell(): Piece
	placePiece()
}

class Score {
	person: String
	points: Integer
}

enum PremiumTileType {
	QuadrupleWord
	TripleWord
	DoubleWord
	QuadrupleLetter
	TripleLetter
	DoubleLetter
}

class Leaderboard

Leaderboard "1" *-- "*" Score

Bag "1" -- "*" Piece : has

Board "1" -- "*" Piece : placed

Player <|-- Human
Player <|-- AI

Player "0..1" -- "0..7" Piece : rack

@enduml